<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="#2EABDD">

    <TextView
            android:id="@+id/tvInput"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#49B1FF"
            android:maxLength="12"
            android:textSize="48sp"/>

    <!--  Row 1  -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights,RtlHardcoded,UsingOnClickInXml,ButtonStyle">
        <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7"
                android:layout_marginRight="4sp"
                android:onClick="onDigit"/>
        <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="4sp"
                android:text="@string/_8"
                android:onClick="onDigit"/>
        <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9"
                android:layout_marginRight="4sp"
                android:onClick="onDigit"/>
        <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_Div"
                android:onClick="onOperator"/>
    </LinearLayout>

    <!--  Row 2  -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights,RtlHardcoded,UsingOnClickInXml,ButtonStyle">
        <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_4"
                android:layout_marginRight="4sp"
                android:onClick="onDigit"/>
        <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="4sp"
                android:text="@string/_5"
                android:onClick="onDigit"/>
        <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6"
                android:layout_marginRight="4sp"
                android:onClick="onDigit"/>
        <Button
                android:id="@+id/btnMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_Multiply"
                android:onClick="onOperator"/>
    </LinearLayout>

    <!--  Row 3  -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights,RtlHardcoded,UsingOnClickInXml,ButtonStyle">
        <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1"
                android:layout_marginRight="4sp"
                android:onClick="onDigit"/>
        <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="4sp"
                android:text="@string/_2"
                android:onClick="onDigit"/>
        <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3"
                android:layout_marginRight="4sp"
                android:onClick="onDigit"/>
        <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_Sub"
                android:onClick="onOperator"/>
    </LinearLayout>

    <!--  Row 4  -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights,RtlHardcoded,UsingOnClickInXml,ButtonStyle">
        <Button
                android:id="@+id/btnDecimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_Decimal"
                android:layout_marginRight="4sp"
                android:onClick="onDecimalPoint"
                tools:ignore="NestedWeights,RtlHardcoded"/>
        <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="4sp"
                android:text="@string/_0"
                android:onClick="onDigit"
                tools:ignore="RtlHardcoded"/>
        <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_Clear"
                android:layout_marginRight="4sp"
                android:onClick="onClear"
                android:layout_marginEnd="4sp"/>
        <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_Add"
                android:onClick="onOperator"/>
    </LinearLayout>

    <!--  R0w 5 -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:orientation="horizontal">
        <Button
                android:id="@+id/btnEqual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_Equal"
                tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>
</LinearLayout>